[project]
name = "cme-server"
version = "0.1.0"
description = "Common Mitigation Enumeration - MCP Server and Database"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "psycopg[binary]",
    "jinja2",
]

[project.scripts]
cme-server = "src.server:main"
cme-seed = "src.seed:main"
build-site = "build_site:main"
